resources/sass/app.scss
// Fonts
@import url('https://fonts.googleapis.com/css?family=Nunito');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");

@font-face {
    font-family: 'Broadway';
    src: url('/fonts/BroadwayRegular.ttf');
}

@font-face {
    font-family: 'Corbel';
    src: url('/fonts/Corbel.ttf');
}

// Variables
@import 'variables';

// Bootstrap
@import 'node_modules/bootstrap/scss/bootstrap';

body {
    min-height: 100%;
    font-family: 'Montserrat';
    font-size: 1em;
}

header {
    padding-top: 1.5em;
}

.admin-link {
    text-decoration: none;
    color: darken($secondary, 5%);
    position: absolute;
    top: 2px;
    right: 10px;
}

.admin-link:hover {
    color: lighten($secondary, 10%);
}

.content {
    margin-bottom: 60px;
}

.tab-link-container {
    flex: 1;
    position: relative;
}

.tab-link {
    display: block;
    color: $gold-secondary;
    text-decoration: none;
    font-size: 1.15rem;
    width: 100%;
    text-align: center;
}

.tab-link.active::before,
.tab-link.active::after {
    height: 1px;
    width: 90%;
    animation: outline 0.3s ease-in-out;
}

.tab-link:hover {
    color: lighten($gold-secondary, 15%);
}

.tab-link::before,
.tab-link::after,
.footer-link::before,
.footer-link::after {
    content: '';
    position: absolute;
    width: 0;
    height: 0;
    left: 5%;
    background-color: $gold-secondary;
}

.tab-link::before,
.footer-link::before {
    top: -1px;
}

.tab-link::after,
.footer-link::after {
    bottom: -1px;
}

::file-selector-button {
    background-color: $gold-main !important;
}

@keyframes outline {
    0% {
        height: 1px;
        width: 0;
        left: 50%
    }

    100% {
        height: 1px;
        width: 90%;
        left: 5%;
    }
}

.tab-link:not(.tab-link.active):hover:before,
.tab-link:not(.tab-link.active):hover:after,
.footer-link:hover:before,
.footer-link:hover:after {
    height: 1px;
    width: 90%;
    animation: outline 0.3s ease-in-out;
}

.tab-divider {
    border-right: solid 1px $gold-secondary;
}

.project-category {
    display: none;
}

.project-category.active {
    opacity: 1;
    display: block;
    animation: fadeIn 0.5s linear;
}

@keyframes fadeIn {

    0% {
        opacity: 0
    }

    100% {
        opacity: 1
    }
}

.project-category-title {
    font-size: 2.5rem;
}

.project-title {
    font-size: 1.75rem;
}

footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
}

.footer-link {
    color: $gold-secondary;
    text-decoration: none;
    width: 25%;
    text-align: center;
    font-size: 1.2rem;
    position: relative;
}

.footer-link:hover {
    color: lighten($gold-secondary, 15%);
}

.footer-link-outer {
    border-left: solid 1px $gold-secondary;
    border-right: solid 1px $gold-secondary;
}

.my {
    display: none;
}

.footer-divider {
    display: none;
}

form label {
    color: $gold-main;
}

.navbar-brand {
    font-family: 'Broadway';
    color: $gold-main !important;
}

h1,
h2,
h3 {
    font-family: 'Broadway';
    color: $gold-main;
}

h2 textarea.form-control,
select.form-control,
input.form-control {
    background-color: $primary !important;
    color: $gold-secondary !important;
}

.btn-primary {
    color: $gold-secondary !important;
}

.btn-warning {
    color: $dark !important;
}

.btn-danger {
    color: $gold-secondary !important;
}

.title {
    margin-top: -10px;
    margin-bottom: -20px;
    font-size: 69px; //nice
}

.subtitle {
    font-size: 45px;
    letter-spacing: 8px;
    position: relative;

}

.ornament-bottom {
    margin-top: -15px;
}

.tabs.mobile {
    display: none;
}

.tabs.desktop {
    display: block;
}

@media screen and (max-width: 768px) {

    .tabs.mobile {
        display: block;
    }

    .tabs.desktop {
        display: none;
    }

    header {
        padding-top: 1em;
    }

    .title {
        font-size: 35px;
        margin: 0;
        line-height: 35px;
    }

    .subtitle {
        font-size: 20px;
        line-height: 20px;
    }

    .ornament-bottom {
        margin-top: -10px;
    }

    .footer-link {
        width: 100%;
        font-size: 1rem;
    }

    .footer-link-left {
        border-left: none;
    }

    .footer-link-right {
        border-right: none;
    }

    .footer-divider {
        border-top: solid 1px $gold-secondary;
        display: block;
    }

    .my {
        display: inline;
    }

    .download-my {
        display: none;
    }
}

@media screen and (min-width: 769px) and (max-width: 960px) {
    .footer-link {
        width: 27%;
        font-size: 1.1em;
    }

    .tab-link {
        font-size: .95em;
    }
}

